--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -217,29 +217,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        android:weightSum="22"
+        android:weightSum="12"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_status_Frag"
         app:layout_constraintVertical_weight="1">
-
-        <TextView
-            android:id="@+id/txtHold_View1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:enabled="false" />
-
-        <Button
-            android:id="@+id/btnReload_Status_Frag"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:background="@drawable/custom_button_cart_frag"
-            android:text="ReLoad"
-            android:textColor="@color/white"
-            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
         <TextView
             android:id="@+id/txtHold_View2"
@@ -256,7 +239,7 @@
             android:background="@drawable/custom_button_cart_frag"
             android:padding="10dp"
             android:shadowRadius="10"
-            android:text="Thread"
+            android:text="Change Thread"
             android:textColor="@color/white"
             tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
