--- a/app/src/main/res/layout/fragment_dialog_image.xml
+++ b/app/src/main/res/layout/fragment_dialog_image.xml
@@ -16,7 +16,7 @@
         android:textSize="20sp"
         android:gravity="center"
         android:background="@drawable/bg_top_exit_dialog"
-        android:text="Change thread"/>
+        android:text="Change threshold"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_marginTop="16dp"
-            android:hint="Thread" />
+            android:hint="Threshold" />
         
         <LinearLayout
             android:layout_width="match_parent"
