--- a/app/src/main/res/layout/notification_view.xml
+++ b/app/src/main/res/layout/notification_view.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Non-Recycle:"
+            android:text="Smaller"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
@@ -32,7 +32,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Recycle:"
+            android:text="Bigger"
             android:textColor="@color/black"
             android:textSize="15sp" />
     </LinearLayout>
