--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -287,7 +287,7 @@
             android:background="@drawable/custom_button_cart_frag"
             android:padding="10dp"
             android:shadowRadius="10"
-            android:text="Thread"
+            android:text="Thresh"
             android:textColor="@color/white"
             tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
